--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 #
-# otlmr documentation build configuration file, created by
+# otlm documentation build configuration file, created by
 # sphinx-quickstart on Fri Jun 19 15:57:39 2015.
 #
 # This file is execfile()d with the current directory set to its containing dir.
@@ -20,7 +20,7 @@ import subprocess
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
 sys.path.insert(0, os.path.abspath('sphinxext'))
-sys.path.insert(0, '@OTLMR_PYTHON_BUILD_MODULE_PATH@')
+sys.path.insert(0, '@OTLM_PYTHON_BUILD_MODULE_PATH@')
 sys.path.insert(0, '@OPENTURNS_PYTHON_MODULE_PATH@')
 
 # -- General configuration -----------------------------------------------------
@@ -84,7 +84,7 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = u'otlmr'
+project = u'otlm'
 copyright = u'2016, Airbus-EDF-IMACS-Phimeca'
 
 # The version info for the project you're documenting, acts as replacement for
@@ -210,7 +210,7 @@ html_last_updated_fmt = '%b %d, %Y'
 #html_file_suffix = None
 
 # Output file base name for HTML help builder.
-htmlhelp_basename = 'otlmrdoc'
+htmlhelp_basename = 'otlmdoc'
 
 
 # -- Options for LaTeX output --------------------------------------------------
@@ -229,7 +229,7 @@ latex_additional_files = ['math_notations.sty']
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-  ('index', 'otlmr.tex', u'otlmr Documentation',
+  ('index', 'otlm.tex', u'otlm Documentation',
    u'IMACS', 'manual'),
 ]
 
@@ -259,7 +259,7 @@ latex_documents = [
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
 man_pages = [
-    ('index', 'otlmr', u'otlmr Documentation',
+    ('index', 'otlm', u'otlm Documentation',
      [u'IMACS'], 1)
 ]
 
@@ -273,8 +273,8 @@ man_pages = [
 # (source start file, target name, title, author,
 #  dir menu entry, description, category)
 texinfo_documents = [
-  ('index', 'otlmr', u'otlmr Documentation',
-   u'IMACS', 'otlmr', 'One line description of project.',
+  ('index', 'otlm', u'otlm Documentation',
+   u'IMACS', 'otlm', 'One line description of project.',
    'Miscellaneous'),
 ]
 
