--- a/distro/debian/control
+++ b/distro/debian/control
@@ -1,4 +1,4 @@
-Source: otlmr
+Source: otlm
 Section: science
 Priority: extra
 Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
@@ -9,10 +9,10 @@ Homepage: http://trac.openturns.org/
 X-Python-Version: current
 X-Python3-Version: current
 
-Package: otlmr
+Package: otlm
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, python-openturns, python3-openturns, python
-Description: openturns module otlmr
+Description: openturns module otlm
  Template module for OpenTURNS
  It provides useful features
