--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -22,7 +22,7 @@ macro ( ot_check_test TESTNAME )
   set ( TESTNAME_SRCS ${TESTNAME_SRC} )
   add_executable ( ${TESTNAME_TGT} EXCLUDE_FROM_ALL ${TESTNAME_SRCS} )
   add_dependencies ( tests ${TESTNAME_TGT} )
-  target_link_libraries ( ${TESTNAME_TGT} otlmr )
+  target_link_libraries ( ${TESTNAME_TGT} otlm )
   if ( MINGW )
     target_link_libraries ( ${TESTNAME_TGT} CRT_fp8 )
   endif ()
@@ -75,7 +75,7 @@ macro ( ot_check_test TESTNAME )
   set_tests_properties ( cppcheck_${TESTNAME} PROPERTIES ENVIRONMENT "${CHECK_ENVIRONMENT}" )
   list ( APPEND CHECK_TO_BE_RUN ${TESTNAME_TGT} )
   install ( FILES ${TESTNAME_SRC}
-            DESTINATION ${OTLMR_EXAMPLE_PATH} 
+            DESTINATION ${OTLM_EXAMPLE_PATH} 
           )
 endmacro ()
 
