--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ after_success:
   - mkdir -p openturns.github.io/${REPO_NAME}/${TRAVIS_BRANCH}
   - cp -r ~/.local/share/${REPO_NAME}/doc/html/* openturns.github.io/${REPO_NAME}/${TRAVIS_BRANCH}
   - cd openturns.github.io
+# Remove old otlmr module
+  - rm -rf otlmr
   - touch .nojekyll
   - git config user.email "support@travis-ci.com"
   - git config user.name "Travis CI"
