travis: pass --disable-woff configure flag to dvisvgm
Fontforge had been embedded in newer 2.0.4, and it fails to build.
Previous builds of dvisvgm did not find fontforge, so there is
no regression

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - git clone https://github.com/mgieseki/dvisvgm.git
   - pushd dvisvgm
   - ./autogen.sh
-  - ./configure --prefix=$HOME/.local
+  - ./configure --prefix=$HOME/.local --disable-woff
   - make -j2
   - make install
   - export PATH=$PATH:$HOME/.local/bin
